--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   </head>
   <body class="w-full h-full bg-black font-ontserrat">
     <nav
-      class="bg-white border-gray-200 px-2 sm:px-4 py-2.5 rounded dark:bg-gray-900"
+      class=" border-gray-200 px-2 sm:px-4 py-2.5 rounded bg-gray-900"
     >
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
@@ -26,7 +26,7 @@
             alt="Flowbite Logo"
           />
           <span
-            class="self-center text-xl font-semibold whitespace-nowrap dark:text-white"
+            class="self-center text-xl font-semibold whitespace-nowrap "
             >IPST Camp</span
           >
         </a>
