--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             alt="Flowbite Logo"
           />
           <span
-            class="self-center text-xl font-semibold whitespace-nowrap "
+            class="self-center text-xl font-semibold whitespace-nowrap text-white"
             >IPST Camp</span
           >
         </a>
