--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
-        <a href="https://flowbite.com/" class="flex items-center">
+        <a href="https://www.facebook.com/ACSIPSTProgram" class="flex items-center">
           <img
             src="./src/logo.jpg"
             class="mr-3 h-6 sm:h-9 rounded-full"
