change navbar logo and name

--- a/index.html
+++ b/index.html
@@ -13,21 +13,22 @@
     />
   </head>
   <body class="w-full h-full bg-black font-ontserrat">
-    <nav
-      class=" border-gray-200 px-2 sm:px-4 py-2.5 rounded bg-gray-900"
-    >
+    <nav class="border-gray-200 px-2 sm:px-4 py-2.5 rounded bg-gray-900">
       <div
         class="container flex flex-wrap justify-between items-center mx-auto"
       >
-        <a href="https://www.facebook.com/ACSIPSTProgram" class="flex items-center">
+        <a
+          href="https://www.facebook.com/ACSIPSTProgram"
+          class="flex items-center"
+        >
           <img
-            src="./src/logo.jpg"
+            src="./src/logo.png"
             class="mr-3 h-6 sm:h-9 rounded-full"
             alt="Flowbite Logo"
           />
           <span
             class="self-center text-xl font-semibold whitespace-nowrap text-white"
-            >IPST Camp</span
+            >IPST Escape</span
           >
         </a>
         <button
@@ -61,21 +62,22 @@
       <i class="fa-solid fa-key text-white text-7xl mt-32 animate-bounce"></i>
       <h1 class="text-white text-3xl mt-10 mb-10">Password</h1>
       <form class="items-center text-center" onsubmit="return myFunction()">
-      <input
-        type="text"
-        id="simplesearch"
-        class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-64 pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-        placeholder="password here"
-        required
-      />
-      <button
-        type="submit"
-        value="Submit"
-        class="mt-10 text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 bg-white"
-      >
-        Submit
-      </button>
-    </form>
+        <input
+          type="text"
+          id="simplesearch"
+          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-64 pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="password here"
+          required
+        />
+        <button
+          type="submit"
+          value="Submit"
+          class="mt-10 text-red-700 hover:text-white border border-red-700 hover:bg-red-800 focus:ring-4 focus:outline-none focus:ring-red-300 font-medium rounded-lg text-sm px-5 py-2.5 text-center mr-2 mb-2 bg-white"
+        >
+          Submit
+        </button>
+      </form>
+      <p></p>
     </div>
     <!-- end password section -->
     <script src="./script.js"></script>
