--- a/index.html
+++ b/index.html
@@ -59,14 +59,14 @@
     <!-- navbarend       -->
     <!-- start password section -->
     <div class="flex justify-center items-center flex-col">
-      <i class="fa-solid fa-key text-white text-7xl mt-32 animate-bounce"></i>
-      <h1 class="text-white text-3xl mt-10 mb-10">Password</h1>
+      <img class=" h-40 mt-12" src="./src/logo.png" alt="logo ipst">
+      <!-- <h1 class="text-white text-3xl mt-10 mb-10">Password</h1> -->
       <form class="items-center text-center" onsubmit="return myFunction()">
         <input
           type="text"
           id="simplesearch"
-          class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-64 pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
-          placeholder="password here"
+          class="mt-10 bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-64 pl-10 p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
+          placeholder="Password Here*"
           required
         />
         <button
