--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     <!-- navbarend       -->
     <!-- start password section -->
     <div class="flex justify-center items-center flex-col">
-      <img class=" h-40 mt-12" src="./src/logo.png" alt="logo ipst">
+      <img class="h-40 mt-12" src="./src/logo.png" alt="logo ipst" />
       <!-- <h1 class="text-white text-3xl mt-10 mb-10">Password</h1> -->
       <form class="items-center text-center" onsubmit="return myFunction()">
         <input
@@ -77,7 +77,9 @@
           Submit
         </button>
       </form>
-      <p></p>
+      <div class=" m-5 text-center ">
+        <img src=".\src\logs.png" alt="" class="h-96 rounded-md">
+      </div>
     </div>
     <!-- end password section -->
     <script src="./script.js"></script>
